--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cli-spinners": "^2.6.1",
     "commander": "^9.3.0",
     "csv-parse": "^5.1.0",
+    "currency.js": "^2.0.4",
     "dotenv": "^16.0.1",
     "moment": "^2.29.3",
     "node-fetch": "^3.2.6",
